--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.3",
-        "consoletvs/charts": "6.*",
+        "consoletvs/charts": "5.*",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "gr8shivam/laravel-sms-api": "^3.0",
         "intervention/image": "^2.4",
+        "khill/lavacharts": "^3.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
